--- a/style.css
+++ b/style.css
@@ -8,7 +8,17 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+
 }
+
+
+.wrapper{
+
+width: 100%
+
+
+}
+
 
 body {
 	font-family: 'Quicksand', sans-serif;
@@ -72,7 +82,7 @@ h4{
 }
 
 hr{
-	margin-top: -24px;
+	margin-top: -22px;
 	height: 1px;
 	z-index: 2;
 
@@ -173,4 +183,28 @@ z-index: 4;
 .drift{
 
 width: 550px;
+}
+
+
+
+
+@media only screen and (max-width: 1000px){
+
+
+.bild{
+display: none;
+width 100%;
+padding-bottom: 30px;
+}
+.wrapper{
+	width: 100%px;
+	margin: 0 auto;
+
+
+
+
+
+
+
+
 }
